2006-10-03  Al Riddoch  <alriddoch@zepler.org>

	* eris_connection.cpp: Add support for ServerInfo method and callback.

2006-10-03  Al Riddoch  <alriddoch@zepler.org>

	* eris_view.cpp, PythonCallback.cpp: Return NULL in stub function to
	  prevent warnings.

	* PythonCallback_impl.h: Specialise wrap explicitly so it uses
	  the right kind of reference.

2006-10-03  Al Riddoch  <alriddoch@zepler.org>

	* eris_entity.cpp, eris_entity.h: New wrappers for Eris::Entity.

	* PythonCallback.cpp, PythonCallback_impl.h, PythonCallback.h:
	  Rework the callback and wrapper templates to be simpler,
	  specialise for more types, and add a callback template for two
	  arguments.

	* eris_account.cpp: Use improved callback templates.

	* eris_avatar.cpp: Add callbacks.

2006-10-02  Al Riddoch  <alriddoch@zepler.org>

	* eris.cpp, eris_avatar.cpp, eris_avatar.h, eris_view.cpp,
	  eris_view.cpp: Add new wrapper types for Eris::View and
	  Eris::Avatar.

	* PythonCallback.cpp: Add a specialisation for the wrapPtr
	  template that wraps Eris::Avatar.

	* wrapper_template.cpp: Example code to be used to create new
	  wrappers.

2006-10-02  Al Riddoch  <alriddoch@zepler.org>

	* PythonCallback.cpp, PythonCallback_impl.h, PythonCallback.h:
	  Implement wrap() for references, and rename the pointer wrapper
	  template to wrapPtr().

	* setup.py: Add necessary handling for library directories for eris.

2006-10-02  Al Riddoch  <alriddoch@zepler.org>

	* PythonCallback_impl.h, PythonCallback.cpp, PythonCallback.h:
	  Add templates for handling callback arguments.

	* eris_account.cpp: Implement createCharacter, and add more callbacks
	  with argument support this time.

2006-10-01  Al Riddoch  <alriddoch@zepler.org>

	* eris_account.cpp: Start wrapping a bunch more methods.

2006-10-01  Al Riddoch  <alriddoch@zepler.org>

	* PythonCallback.cpp, PythonCallback.h: New class to call python
	  functions in response to sigc++ signals.
