@@ -1,3 +1,10 @@
+2006-11-08  Al Riddoch  <alriddoch@zepler.org>
+
+	* eris_connection.cpp: Fix servername to name as its know in the
+	  protocol and back end.
+
+	* eris.cpp: Enable logging of some Eris stuff.
+
 2006-10-03  Al Riddoch  <alriddoch@zepler.org>
 
 	* eris_connection.cpp: Add support for ServerInfo method and callback.
